# multiband

./: .gitignore  LICENSE  README.md  examples.py  multiband_synthesis.py  test_sanity.py
.github/workflows/: pages.yml
web/: CMakeLists.txt  README.md  test_wasm.mjs
web/src/: mini_json.hpp  mini_lp.hpp  mini_lp_bench.cpp  mini_lp_test.cpp  solver.cpp  solver.hpp  solver_json.cpp  solver_wasm_main.cpp  zolo_test.cpp
web/ui/: app.js  index.html  presets.js  solver_worker.js  style.css
